added quests and c++ defaultt config support

--- a/Config/Localization/Game_Gather.ini
+++ b/Config/Localization/Game_Gather.ini
@@ -12,6 +12,7 @@ CulturesToGenerate=ru
 [GatherTextStep0]
 CommandletClass=GatherTextFromAssets
 IncludePathFilters=Content/LANG/*
+IncludePathFilters=Content/ITEMS/*
 ExcludePathFilters=Content/Localization/*
 PackageFileNameFilters=*.umap
 PackageFileNameFilters=*.uasset
